tests/base/parser/bad/stmts_t-throw-semicolon-with.scilla
scilla_version 0

contract Test
()

transition arbitrary ()
  throw; (* invalid statement field *)
  field
end
